# fastapi_template

./: CHANGELOG.md  docker-compose.prod.yml  docker-compose.yml  version.sh
.github/workflows/: build_and_deploy.yml  cleanup.yml
backend/: Dockerfile  models.dvc  pyproject.toml
backend/app/: main.py
backend/app/apis/: api.py  deps.py  login_endpoints.py  user_endpoints.py
backend/app/core/: config.py  security.py
backend/app/schemas/: __init__.py  login.py  user.py
backend/app/services/: login_service.py  user_service.py  utils.py
backend/database/db_alembic/: README  alembic.ini  env.py  utils.py
backend/database/db_alembic/versions/: d7b670d958f9_init_db.py
backend/database/db_session/: __init__.py  session.py
backend/database/models/: base.py  user.py
backend/scripts/: init_db.py  run_backend.sh  wait_for_db.py
backend/tests/: conftest.py  utils.py
backend/tests/test_login/: test_login.py
backend/tests/test_user_management/: test_create.py  test_list_users.py  test_update.py  utils.py
proxy/: Dockerfile  prod.Dockerfile  static.yml
proxy/configs/: middlewares.yml  routers.yml
scripts/: aws_deploy.sh  build_images.sh  poetry_lock.sh  prune.sh  run_tests.sh  update_versions.sh
